Changelog for Tickets.

1.13.1 pl
==========
- fix log error

1.13.0 pl
==========
- add integration with FormIt validator for TicketForm and comments

1.12.1 pl
==========
- fix upload files on front-end updating Tickets

1.12.0 pl
==========
- fix error "date strftime is not a function"
- Ability to upload files in comments

1.11.2 pl
==========
- fix max key length with utf8mb4
- add params description for snippet subscribeAuthor
- allow @INLINE, @FILE binding for tpl in subscribeAuthor
- uri alias_visible
- add navigation button on resource update page

1.11.1 pl
==========
- In snippet TicketComments add option "separatePlaceholder"
- In snippet TicketForm add ability exclude -section for options parents, resources
- Add setting "tickets.max_files_upload"

1.11.0 pl
==========
- Ability to subscribe to the author
- Added new snippet "subscribeAuthor".
- Added chunks "tpl.Tickets.author.email.subscription" and "tpl.Tickets.author.subscribe".

1.10.1 pl
==========
- Fix lost subscribers after saving in mgr

1.10.0 pl
==========
- Allow find by raw comment text in mgr.
- Fix box search, allow find by id less 3 char.
- Add new tab for management subscribe TicketsSection
- Add new policy section_unsubscribe
- Add few fields in customize form set

1.9.5 pl
==========
- Fix typo in mgr/comment/create.
- Fix id comments-tab in mgr.
- Fix broken TicketsConfig on Form after login/logout.
- Allow processing loaded image in the OnFileManagerFileCreate event.

1.9.4 pl
==========
- Fixed sometimes bug with save section properties.
- On update ticket upload files UX improvement.
- Save state "clear cache" on update section ticket.

1.9.3 pl
==========
- Ability to delete ticket on front by owner. And undelete ticket on front if it was deleted by owner.
- Added new TicketForm parameters: &allowDelete, &redirectDeleted, &redirectUnDeleted (for delete on front), &tid (forced update Form without $_REQUEST["tid"]).